<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <ScrollView
            android:id="@+id/svContent"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:id="@+id/llPrivacyPolicy"
                    android:background="?selectableItemBackground"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_margin="16dp"
                        android:src="@drawable/ic_open_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:text="@string/about_privacy_policy"
                        android:textSize="16sp"
                        android:textColor="@color/textMain"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                    android:text="@string/about_libraries"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/textOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:id="@+id/llLibraryZxing"
                    android:background="?selectableItemBackground"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_margin="16dp"
                        android:src="@drawable/ic_open_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:text="@string/about_libraries_zxing"
                        android:textSize="16sp"
                        android:textColor="@color/textMain"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                    android:text="@string/about_icons"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/textOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:id="@+id/llIconsPixel"
                    android:background="?selectableItemBackground"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_margin="16dp"
                        android:src="@drawable/ic_open_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:text="@string/about_icons_pixel_perfect"
                        android:textSize="16sp"
                        android:textColor="@color/textMain"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/llIconsDmitri"
                    android:background="?selectableItemBackground"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_margin="16dp"
                        android:src="@drawable/ic_open_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:text="@string/about_icons_dmitri13"
                        android:textSize="16sp"
                        android:textColor="@color/textMain"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                    android:text="@string/about_author"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/textOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:id="@+id/llAuthorPlay"
                    android:background="?selectableItemBackground"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_margin="16dp"
                        android:src="@drawable/ic_open_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:text="@string/about_author_play_store"
                        android:textSize="16sp"
                        android:textColor="@color/textMain"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/llAuthorGit"
                    android:background="?selectableItemBackground"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:layout_margin="16dp"
                        android:src="@drawable/ic_open_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:text="@string/about_author_github"
                        android:textSize="16sp"
                        android:textColor="@color/textMain"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>